Fixed dropdown-item spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -258,6 +258,7 @@ footer {
     }
     .dropdown-item {
         font-size: 14px;
+        padding: 6px 16px;
     }
     h1 {
         font-size: 28px;
@@ -278,6 +279,7 @@ footer {
     .navbar .nav-link,
     .dropdown-item {
         font-size: 15px;
+        padding: 6px 16px;
     }
     .table-compact .row-title a {
         width: 100% !important;
